--- a/index.html
+++ b/index.html
@@ -1,27 +1,233 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- Load with base style -->
-    <link rel="stylesheet" href="assets/billboard.min.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Análisis de Componentes Angular</title>
+	<style>
+		body {
+			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+			margin: 0;
+			padding: 20px;
+			background-color: #f5f5f5;
+		}
+
+		.container {
+			max-width: 1200px;
+			margin: 0 auto;
+			background: white;
+			border-radius: 10px;
+			box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+			padding: 30px;
+		}
+
+		.header {
+			text-align: center;
+			margin-bottom: 30px;
+			border-bottom: 2px solid #e0e0e0;
+			padding-bottom: 20px;
+		}
+
+		.header h1 {
+			color: #333;
+			margin: 0;
+			font-size: 2.5em;
+		}
+
+		.header p {
+			color: #666;
+			margin: 10px 0 0 0;
+			font-size: 1.1em;
+		}
+
+		.stats-grid {
+			display: grid;
+			grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+			gap: 20px;
+			margin-bottom: 30px;
+		}
+
+		.stat-card {
+			background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+			color: white;
+			padding: 20px;
+			border-radius: 10px;
+			text-align: center;
+		}
+
+		.stat-card h3 {
+			margin: 0 0 10px 0;
+			font-size: 1.2em;
+		}
+
+		.stat-card .number {
+			font-size: 2.5em;
+			font-weight: bold;
+			margin: 0;
+		}
+
+		.charts-container {
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			gap: 30px;
+			margin-bottom: 30px;
+		}
+
+		.chart-section {
+			background: #fafafa;
+			padding: 20px;
+			border-radius: 10px;
+			border: 1px solid #e0e0e0;
+		}
+
+		.chart-section h3 {
+			margin: 0 0 20px 0;
+			color: #333;
+			text-align: center;
+		}
+
+		#pieChart, #barChart {
+			width: 100%;
+			height: 400px;
+		}
+
+		.table-container {
+			background: #fafafa;
+			padding: 20px;
+			border-radius: 10px;
+			border: 1px solid #e0e0e0;
+		}
+
+		.table-container h3 {
+			margin: 0 0 20px 0;
+			color: #333;
+			text-align: center;
+		}
+
+		table {
+			width: 100%;
+			border-collapse: collapse;
+			background: white;
+			border-radius: 8px;
+			overflow: hidden;
+			box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+		}
+
+		th, td {
+			padding: 12px 15px;
+			text-align: left;
+			border-bottom: 1px solid #e0e0e0;
+		}
+
+		th {
+			background: #667eea;
+			color: white;
+			font-weight: 600;
+		}
+
+		tr:hover {
+			background-color: #f5f5f5;
+		}
+
+		.loading {
+			text-align: center;
+			padding: 40px;
+			color: #666;
+		}
+
+		.error {
+			background: #ffebee;
+			color: #c62828;
+			padding: 15px;
+			border-radius: 5px;
+			margin: 20px 0;
+			border-left: 4px solid #c62828;
+		}
+
+		@media (max-width: 768px) {
+			.charts-container {
+				grid-template-columns: 1fr;
+			}
+			
+			.stats-grid {
+				grid-template-columns: 1fr;
+			}
+		}
+	</style>
 </head>
 
 <body>
-    <div id="pieChart"></div>
+	<div class="container">
+		<div class="header">
+			<h1>📊 Análisis de Componentes Angular</h1>
+			<p>Visualización de componentes encontrados en el proyecto</p>
+		</div>
 
-    <!-- Step 1) Load D3.js -->
-    <script src="https://d3js.org/d3.v6.min.js"></script>
+		<div id="loading" class="loading">
+			<h3>Cargando datos del análisis...</h3>
+			<p>Por favor espera mientras se cargan los resultados.</p>
+		</div>
 
-    <!-- Step 2) Load billboard.js with style -->
-    <script src="assets/billboard.min.js"></script>
+		<div id="error" class="error" style="display: none;">
+			<h3>❌ Error al cargar los datos</h3>
+			<p>No se pudo cargar el archivo de análisis. Asegúrate de que existe el archivo <code>analysis-result.json</code>.</p>
+		</div>
 
-    <script src="assets/report.js"></script>
+		<div id="content" style="display: none;">
+			<div class="stats-grid">
+				<div class="stat-card">
+					<h3>Total de Componentes</h3>
+					<p class="number" id="totalComponents">0</p>
+				</div>
+				<div class="stat-card">
+					<h3>Tipos Únicos</h3>
+					<p class="number" id="uniqueTypes">0</p>
+				</div>
+				<div class="stat-card">
+					<h3>Proyecto</h3>
+					<p class="number" id="projectName">-</p>
+				</div>
+				<div class="stat-card">
+					<h3>Prefijo</h3>
+					<p class="number" id="componentPrefix">-</p>
+				</div>
+			</div>
 
+			<div class="charts-container">
+				<div class="chart-section">
+					<h3>Distribución por Componente (Gráfico Circular)</h3>
+					<div id="pieChart"></div>
+				</div>
+				<div class="chart-section">
+					<h3>Frecuencia de Uso (Gráfico de Barras)</h3>
+					<div id="barChart"></div>
+				</div>
+			</div>
 
+			<div class="table-container">
+				<h3>Detalle de Componentes</h3>
+				<table id="componentsTable">
+					<thead>
+						<tr>
+							<th>Componente</th>
+							<th>Frecuencia</th>
+							<th>Porcentaje</th>
+						</tr>
+					</thead>
+					<tbody id="tableBody">
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
 
+	<!-- Load D3.js -->
+	<script src="https://d3js.org/d3.v7.min.js"></script>
+	<!-- Load billboard.js -->
+	<script src="assets/billboard.min.js"></script>
+	<!-- Load our visualization script -->
+	<script src="assets/report.js"></script>
 </body>
 
 </html>
